# fastapi-do-zero

./: .dockerignore  compose.yaml  database.db  fly.toml  pyproject.toml
.github/workflows/: pipeline.yml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 376704ba1f69_create_todos_table.py  e627c43ce4bd_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
